# FormDetectApp

./: .env.sample  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
api_v1/: routers.py
api_v1/forms/: crud.py  dao.py  mixins.py  schemas.py  utils.py  views.py
api_v1/forms/type_converters/: __init__.py  type_converters.py
api_v1/forms/type_converters/base_converter/: abc.py  base_converter.py  utils.py
api_v1/tests/: conftest.py  test_api.py  test_utils.py
app_includes/: logs_errors.py
config/: __init__.py  config.py
config/dao/: base_dao.py  dao_types.py
config/database/: db_helper.py
config/database/datadir/: README.md  WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--7214530493106082778.wt  collection-0-8405900352220166661.wt  collection-2-8405900352220166661.wt  collection-4-8405900352220166661.wt  collection-7-8405900352220166661.wt  index-1--7214530493106082778.wt  index-1-8405900352220166661.wt  index-3-8405900352220166661.wt  index-5-8405900352220166661.wt  index-6-8405900352220166661.wt  index-8-8405900352220166661.wt  index-9-8405900352220166661.wt  sizeStorer.wt
config/models/: __init__.py  forms.py
docker/fastapi/: start
