[tool.poetry]
name = "almaz-test"
version = "0.1.0"
description = ""
authors = ["Alex Pavlov <yukiu217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
loguru = "^0.7.2"
pytest = "^8.3.3"
motor = "^3.6.0"
pydantic = {extras = ["email"], version = "^2.10.3"}
httpx = "0.27.2"

[tool.pytest.ini_options]
markers = [
    "converter",
    "utils",
    "api",
]

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
asgi-lifespan = "^2.1.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
